--- a/docs/host.config.json
+++ b/docs/host.config.json
@@ -6,7 +6,7 @@
         "headers": [
           {
             "name": "Link",
-            "value": "</stencil-bug-hydrate-change-element/build/app/app.wrycrhlw.js>;rel=preload;as=script"
+            "value": "</stencil-bug-hydrate-change-element/build/app/app.ovq895hp.js>;rel=preload;as=script"
           },
           {
             "name": "Link",
