--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build": "stencil build --prerender",
+    "build:gh": "GH_PAGES=true stencil build --prerender && cp src/index.html docs/unhydrated.html",
     "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
     "serve": "stencil-dev-server",
     "start": "npm run dev",
